data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1443.wast
;; 4. **Loop Back-Edge with Stack Condition**:    - **Description**: Execute a loop with a `br_if` that conditionally jumps back to the beginning. Emphasize stack content checks at the branch point to ensure the stack is properly managed.    - **Constraint Checked**: Correct stack management at loop back-edges.    - **Relation to Stack Corruption**: Verifies that jumping back in a loop does not cause stack corruption.

(assert_invalid
  (module
    (func $loop-back-edge-stack-condition
      (loop 
        (i32.const 0)
        (br_if 0 (i32.const 1))
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)